[FIX] Banner hero z-index.

--- a/mm_web_app/styles/pages/_home.scss
+++ b/mm_web_app/styles/pages/_home.scss
@@ -52,6 +52,7 @@ the home page
     }
     &:before {
       @include abs-pos ($top: 0, $right: 0, $bottom: 0, $left: 0);
+      z-index: -1;
       content: "";
       background-color: rgba(0, 0, 0, 0.5);
     }
